fix: z-index

--- a/src/Header.css
+++ b/src/Header.css
@@ -12,7 +12,7 @@
       position: fixed;
       width: 100%;
       top: 0;
-      z-index: 1;
+      z-index: 4;
     }
   }
 
@@ -40,7 +40,7 @@
       top: 0;
       left: 0;
       padding: 1em;
-      z-index: 1;
+      z-index: 4;
       width: 50%;
       height: 100%;
       left: 100%;
